<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>
    <item
        android:id="@+id/historyFragment"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24"/>
    <item
        android:id="@+id/cameraFragment"
        android:title="@string/camera"
        android:icon="@drawable/ic_baseline_camera_24" />
    <item
        android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_star_24"/>
    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_person" />
</menu>