<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/cameraFragment"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/add_story"
            app:showAsAction="always" />

        <item android:id="@+id/settingsFragment"
            android:title="@string/settings"
            android:icon = "@drawable/ic_baseline_settings_24"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout"
            android:icon = "@drawable/ic_logout"
            app:showAsAction="ifRoom"
            />
    </group>
</menu>